Bug Fixing and ad user guideline
