# backend/docs/swagger.yaml
@@ -358,12 +358,6 @@ definitions:
       director_id:
         description: Relasi dengan DirectorModel (untuk dokumen individu)
         type: string
-      expiry_date:
-        description: Tanggal kadaluarsa dokumen
-        type: string
-      expiry_notified:
-        description: Apakah sudah di-notify
-        type: boolean
       file_name:
         description: Nama file asli
         type: string
